--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,7 @@
 
   <app-stars-component></app-stars-component>
 
-  <div
-    class="jupiter"
-    data-start="top: 400px;"
-    data-end="top: 350px;">
-  </div>
+  <div class="jupiter"></div>
 
   <app-hero-component *ngIf="!isCaseStudy" [home]="isHome"></app-hero-component>
 
