--- a/src/app/misc/identity/identity.component.html
+++ b/src/app/misc/identity/identity.component.html
@@ -1,11 +1,13 @@
 <div class="white-bg">
   <section class="container-fluid">
-    <a [routerLink]="['../']">< Back</a>
+    <app-back-button></app-back-button>
 
     <h1>Brand Identity</h1>
 
     <p>
-      Your brand identity (or logo) is usually the first thing people see. It's the most iconic part of your brand so shouldn't be understated.
+      Not to be confused with our <a [routerLink]="'/service/brand-identity'">"Identity"</a> service,
+      your brand identity (or logo) is usually the first thing people see.
+      It's the most iconic part of your brand so shouldn't be understated.
     </p>
 
     <p>
