--- a/src/app/pages/brand-identity/brand-identity.component.html
+++ b/src/app/pages/brand-identity/brand-identity.component.html
@@ -26,11 +26,17 @@
       </div>
       <div class="col-sm d-flex flex-column">
         <ul class="white-bg__service-list">
-          <li>Brand Identity (logo)</li>
+          <li>
+            <a [routerLink]="'/service/brand-identity/identity'">Brand Identity (logo)</a>
+          </li>
           <li>Brand Naming</li>
           <li>Brand Guidelines</li>
-          <li>Brand/Corporate Story</li>
-          <li>Tone-of-Voice/Personality</li>
+          <li>
+            <a [routerLink]="'/service/brand-identity/corporate-story'">Brand/Corporate Story</a>
+          </li>
+          <li>
+            <a [routerLink]="'/service/brand-identity/tone-of-voice'">Tone-of-Voice/Personality</a>
+          </li>
         </ul>
 
         <img src="/assets/images/design.jpg" alt="">
