--- a/src/app/global/stars/stars.component.scss
+++ b/src/app/global/stars/stars.component.scss
@@ -50,33 +50,75 @@ $shadows-big:    multiple-box-shadow(100);
   width: 100%;
   height: 100%;
   z-index: -2;
+  transform: rotate(45deg);
 }
+
+$shooting-time: 10000ms;
 
 .meteor {
   position: absolute;
-  width: 700px;
-  top: 0;
-  height: 1px;
-  -webkit-transform: rotate(45deg);
-  background-image: -webkit-linear-gradient(right, $color-white, rgba($color-white, 0));
-  animation: meteor 20s linear infinite;
-  opacity: 1;
+  left: 25%;
+  top: 25%;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(255, 255, 255, 1), rgba(0, 0, 255, 0));
+  border-radius: 999px;
+  filter: drop-shadow(0 0 6px rgba(105, 155, 255, 1));
+  animation:
+    tail $shooting-time ease-in-out infinite,
+    shooting $shooting-time ease-in-out infinite;
 
-  &:before {
-    content: ' ';
+  &::before {
+    content: '';
     position: absolute;
-    width: 4px;
-    height: 5px;
-    background-color: $color-white;
-    border-radius: 50%;
-    box-shadow: 0 0 14px 4px $color-white;
-    margin-top: -2px;
+    top: calc(50% - 1px);
+    right: 0;
+    height: 2px;
+    background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgba(255, 255, 255, 1), rgba(0, 0, 255, 0));
+    transform: translateX(50%) rotateZ(45deg);
+    border-radius: 100%;
+    animation: shining $shooting-time ease-in-out infinite;
+  }
+
+  &::after {
+    @extend .meteor::before;
+    transform: translateX(50%) rotateZ(-45deg);
   }
 }
 
-@keyframes meteor {
-  0% {margin-top: -300px; margin-right: 900px; opacity: 1}
-  8% {opacity: 0}
-  10% {margin-top: 600px; margin-left: 1000px; opacity: 0}
-  100% {opacity: 0}
+@keyframes tail {
+  0% {
+    width: 0;
+  }
+
+  30% {
+    width: 300px;
+  }
+
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shining {
+  0% {
+    width: 0;
+  }
+
+  50% {
+    width: 30px;
+  }
+
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(1200px);
+  }
 }
