HOTFIX - remove parallax

--- a/src/app/global/stars/stars.component.html
+++ b/src/app/global/stars/stars.component.html
@@ -1,11 +1,7 @@
-<div class="stars" appParallax [ratio]=".01"></div>
+<div class="stars"></div>
 
-<div
-  class="stars stars--close"
-  appParallax [ratio]=".02"></div>
+<div class="stars stars--close"></div>
 
-<div
-class="meteors">
-
+<div class="meteors">
   <div class="meteor"></div>
 </div>
