--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,8 @@
           <h3>Brand Strategy</h3>
           <p>
             We kick things off the right way with a facilitated Strategy session. With you, we get to know your company,
-            your problems, your users and your goals so there’s method to our madness. It’s plain sailing from then on in.
+            your problems, your users and your goals so there’s method to our madness. It’s plain sailing from then on
+            in.
           </p>
 
           <p>
@@ -85,13 +86,11 @@
   <div *ngIf="developmentMode; else map" class="text-center">Map will not load in dev mode</div>
 
   <ng-template #map>
-    <ng-container *ngIf="isBrowser">
-      <agm-map [zoom]="2" [latitude]="0" [longitude]="151.2092955" [mapDraggable]="false" [zoomControl]="false"
-               [streetViewControl]="false" [styles]="styles">
-        <agm-marker [latitude]="-33.8688197" [longitude]="151.2092955"></agm-marker>
-        <agm-marker [latitude]="51.5074" [longitude]="0.1278" [opacity]=".7"></agm-marker>
-      </agm-map>
-    </ng-container>
+    <agm-map [zoom]="2" [latitude]="0" [longitude]="151.2092955" [mapDraggable]="false" [zoomControl]="false"
+             [streetViewControl]="false" [styles]="styles">
+      <agm-marker [latitude]="-33.8688197" [longitude]="151.2092955"></agm-marker>
+      <agm-marker [latitude]="51.5074" [longitude]="0.1278" [opacity]=".7"></agm-marker>
+    </agm-map>
   </ng-template>
 
   <div class="container-fluid">
@@ -142,7 +141,8 @@
             </a>
 
             <div class="home__blog-info">
-              <a [href]="blog.author.link"><img [src]="blog.author.avatar_urls['48']" alt="" class="home__blog-icon"></a>
+              <a [href]="blog.author.link"><img [src]="blog.author.avatar_urls['48']" alt=""
+                                                class="home__blog-icon"></a>
               By <a [href]="blog.author.link"><strong>{{blog.author.name}}</strong></a> on <strong>{{blog.date[2]}}.{{blog.date[1]}}.{{blog.date[0]}}</strong>
             </div>
 
