check for image

--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -10,7 +10,7 @@
         </header>
         <ul class="list-unstyled">
           <ng-container *ngFor="let brand of highlightedFriendStore.friends$ | async">
-            <li class="footer__list-item" *ngIf="brand.acf.website">
+            <li class="footer__list-item" *ngIf="brand.acf?.website">
               <a [href]="brand.acf.website" target="_blank" class="footer__link">
                 {{brand.title.rendered}}
               </a>
