--- a/src/app/misc/positioning/positioning.component.html
+++ b/src/app/misc/positioning/positioning.component.html
@@ -12,7 +12,7 @@
     </p>
 
     <p>
-      Positioning also makes you think about what makes you different and how you will stand out, not just in what you
+      Brand Positioning also makes you think about what makes you different and how you will stand out, not just in what you
       offer but how you will offer it.
     </p>
 
