--- a/src/app/pages/brand-strategy/brand-strategy.component.html
+++ b/src/app/pages/brand-strategy/brand-strategy.component.html
@@ -17,7 +17,8 @@
         <p>
           This stage in the project gives us the opportunity to delve deeper into your pain points to better understand
           your problems. We encourage you to dig deep and think about your audience and build user profiles,
-          think about your company and where you want to position it and seek your competitors to get the upper hand.
+          think about your company and where you want to position it and seek your competitors to get the upper hand. This
+          enables strategic brand management when we develop your identity.
         </p>
 
         <p>
