--- a/src/app/pages/what/what.component.html
+++ b/src/app/pages/what/what.component.html
@@ -3,9 +3,15 @@
     <div class="row">
       <div class="col-4 what-we-do__fixed-titles-wrap">
         <div class="what-we-do__fixed-titles what-we-do__first-section" #fixedWrap [ngClass]="{'what-we-do__fixed-titles--no-title': !activeIndex}">
-          <a href="#" (click)="goToSection($event, 1)" class="h2 what-we-do__fixed-title" [ngClass]="{'what-we-do__fixed-title--active': activeIndex === 1}">Strategy</a>
-          <a href="#" (click)="goToSection($event, 2)" class="h2 what-we-do__fixed-title" [ngClass]="{'what-we-do__fixed-title--active': activeIndex === 2}">Identity</a>
-          <a href="#" (click)="goToSection($event, 3)" class="h2 what-we-do__fixed-title" [ngClass]="{'what-we-do__fixed-title--active': activeIndex === 3}">Experience</a>
+          <a
+            href="#"
+            *ngFor="let service of services; let i = index"
+            (click)="goToSection($event, i + 1)"
+            class="h2 what-we-do__fixed-title"
+            [ngClass]="{'what-we-do__fixed-title--active': activeIndex === i + 1}"
+          >
+            {{service.title.rendered}}
+          </a>
         </div>
       </div>
       <div class="col-md-8" #scrollSection>
@@ -14,64 +20,20 @@
             <h1 class="what-we-do__title">What we do</h1>
           </header>
 
-          <p>
-            We offer 3 services that make up what we consider 'brand'. Let us handle them all to get the best, most consistent
-            result. We also allow you to jump in at any point in the brand lifecycle and take advantage no matter
-            what stage of 'brand ready' you are.
-          </p>
+          <div [innerHTML]="content.content.rendered"></div>
         </section>
 
-        <section class="section">
+        <section class="section" *ngFor="let service of services">
           <header>
-            <h2 id="strategy">Brand Strategy</h2>
+            <h2 id="{{service.slug}}">{{service.title.rendered}}</h2>
           </header>
 
-          <h3>Measure twice, draw once</h3>
+          <h3 *ngIf="service.acf.subtitle">{{service.acf.subtitle}}</h3>
 
-          <p class="what-we-do--tagline">
-            We kick things off the right way with a facilitated Strategy session.
-            We get to know your company, your problems, your users and your goals so there’s method to our madness.
-            It’s plain sailing from then on in.
-          </p>
+          <div class="what-we-do--tagline" [innerHTML]="service.acf.intro_text" *ngIf="service.acf.intro_text"></div>
 
           <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
-            Learn more about <a [routerLink]="['/service/brand-strategy']">Strategy</a>.
-          </p>
-        </section>
-
-        <section class="section">
-          <header>
-            <h2 id="branding">Brand Identity</h2>
-          </header>
-
-          <h3>Move people</h3>
-
-          <p class="what-we-do--tagline">
-            Identity establishes your brand assets and guidelines. We provide a launchpad for your brand
-            and everything you do herein with rich, daring design driven by
-            <a href="#" (click)="goToSection($event, 1)">Strategy</a>.
-          </p>
-
-          <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
-            Find out what <a [routerLink]="['/service/brand-identity']">Identity</a> is.
-          </p>
-        </section>
-
-        <section class="section">
-          <header>
-            <h2 id="design">Brand Experience</h2>
-          </header>
-
-          <h3>We love making shit look cool</h3>
-
-          <p class="what-we-do--tagline">
-            Experience is where we take your brand to the stratosphere and
-            beyond. Experience takes everything we've build from <a href="#" (click)="goToSection($event, 1)">Strategy</a>
-            and <a href="#" (click)="goToSection($event, 2)">Identity</a> and sets its jet fuel on fire be it digital or print.
-          </p>
-
-          <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
-            See what <a [routerLink]="['/service/brand-experience']">Experience</a> can do for you.
+            Learn more about <a [routerLink]="'/service/' + service.slug">{{service.title.rendered}}</a>.
           </p>
         </section>
       </div>
