--- a/src/app/misc/website-development/website-development.component.html
+++ b/src/app/misc/website-development/website-development.component.html
@@ -10,7 +10,7 @@
     <p>
       We’re confident we can build the site you need, using elegant user experience (UX) and making it accessible to all.
       We have your users in mind. We work closely to your
-      <a [routerLink]="'/service/brand-experienc/website-design'">website design</a> to make sure your website reflects
+      <a [routerLink]="'/service/brand-experience/website-design'">website design</a> to make sure your website reflects
       your brand perfectly.
     </p>
 
@@ -20,7 +20,7 @@
       </header>
 
       <p>
-        We have years of experience in the industry, using technologies such as React, Angular and Vue
+        We have years of experience in the web development industry, using technologies such as React, Angular and Vue
         or building brochure sites to complete eCommerce and Wordpress systems or Shopify themes.
       </p>
 
@@ -51,7 +51,7 @@
       </header>
 
       <p class="text-lead">
-        Need a CMS? We got you covered. With our extensive Wordpress experience
+        Need a CMS? We got you covered. With our extensive Wordpress experience and ecommerce website development,
         we can build you a website where you have complete control of the content.
       </p>
 
@@ -79,6 +79,7 @@
         <li><a [routerLink]="'/service/brand-strategy'">Brand Strategy</a></li>
         <li><a href="https://jupiterandthegiraffe.com">Branding Agency</a></li>
         <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web Development Agency</a></li>
       </ul>
     </section>
 
