--- a/src/app/misc/identity/identity.component.html
+++ b/src/app/misc/identity/identity.component.html
@@ -12,11 +12,13 @@
 
     <p>
       Your identity can take many forms. An Icon, typeface or even both! Without an identity that has meaning your brands message is totally lost.
-      It's a shortcut to your values, messaging and, of course, your identity.
+      It's a shortcut to your values, messaging and, of course, your identity. It's important that you understand the users you
+      are trying to attract with your logo and the problems its trying to solve so we help you do that in
+      <a [routerLink]="'/service/brand-strategy'">Strategy</a>.
     </p>
 
     <p>
-      If you're interested in a new brand identity, let us know.
+      If you're interested in a new logo or brand identity, let us know.
     </p>
 
     <app-get-in-touch></app-get-in-touch>
