--- a/src/app/misc/website-design/website-design.component.html
+++ b/src/app/misc/website-design/website-design.component.html
@@ -10,7 +10,7 @@
     </p>
 
     <p>
-      Website design is our bread and butter and so we take responsive, user-centric web design very seriously. We use
+      Website design is our bread and butter and so we take responsive web design and user-centric thinking very seriously. We use
       <a [routerLink]="'/service/brand-exprience/ux'">User Experience</a> as the basis of our designs and build from there.
     </p>
 
@@ -22,5 +22,16 @@
     <img src="/assets/images/design.jpg" alt="">
 
     <app-get-in-touch></app-get-in-touch>
+
+    <section>
+      <h2>Check out our other services</h2>
+
+      <ul class="list-plain">
+        <li><a [routerLink]="'/service/brand-strategy'">Brand Strategy</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Branding Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web design company</a></li>
+      </ul>
+    </section>
   </section>
 </div>
