--- a/src/app/misc/website-development/website-development.component.html
+++ b/src/app/misc/website-development/website-development.component.html
@@ -4,12 +4,12 @@
     <app-back-button></app-back-button>
 
     <header>
-      <h1>Website Development</h1>
+      <h1><span class="sr-only">Custom </span>Website Development</h1>
     </header>
 
     <p>
-      We’re confident we can build the site you need, using elegant user experience (UX) and making it accessible to all.
-      We have your users in mind. We work closely to your
+      We’re confident we can build a custom website and develop it bespoke to your needs, using elegant user experience (UX) and making a repsonsive web design that is accessible to all.
+      We have your end users in mind. We work closely to your
       <a [routerLink]="'/service/brand-experience/website-design'">website design</a> to make sure your website reflects
       your brand perfectly.
     </p>
@@ -31,6 +31,7 @@
         <li>Static sites</li>
         <li><a href="https://aws.amazon.com">AWS</a> and Devops architecture</li>
         <li>Hosting, Email and Domain Name setup</li>
+        <li>Webflow, Wordpress and Squarespace</li>
       </ul>
     </section>
 
@@ -41,7 +42,8 @@
 
       <p>
         It's no good if you have the perfect website if nobody knows about it. We also build semantic, clean and responsive
-        code so that it plays well with search engines so you can be confident your users can easily find you.
+        website so that it plays well with search engines so you can be confident your users can easily find you. SEO plays the foundation
+        in us recommending the right content and honed with our copywriting service.
       </p>
     </section>
 
@@ -51,13 +53,13 @@
       </header>
 
       <p class="text-lead">
-        Need a CMS? We got you covered. With our extensive Wordpress experience and ecommerce website development,
-        we can build you a website where you have complete control of the content.
+        Need a CMS? We got you covered. With our extensive Wordpress website development experience and ecommerce website development,
+        we can build you a site where you have complete control of the content.
       </p>
 
       <ul>
         <li>
-          Bespoke <a href="https://wordpress.com">Wordpress</a> Theme
+          Bespoke <a href="https://wordpress.com" noreferrer nofollow>Wordpress</a> Theme
         </li>
         <li>
           <a href="https://shopify.com" noreferrer nofollow>Shopify</a>
