--- a/src/app/misc/website-design/website-design.component.html
+++ b/src/app/misc/website-design/website-design.component.html
@@ -15,8 +15,8 @@
     </p>
 
     <p>
-      The design itself will work across any device and will reflect all of your brand attributes developed in your
-      <a [routerLink]="'/service/brand-identity'">Brand Identity</a>.
+      The design itself will work across any device, this is what is known as "responsive website design" and will reflect all of your brand attributes developed in your
+      <a [routerLink]="'/service/brand-identity'">Brand Identity</a> which is crucial to maintain the values of your brand and build customer loyalty.
     </p>
 
     <img src="/assets/images/design.jpg" alt="">
