update case study

--- a/src/app/global/get-in-touch/get-in-touch.component.html
+++ b/src/app/global/get-in-touch/get-in-touch.component.html
@@ -1,14 +1,13 @@
-<div class="get-in-touch section text-center">
+<div class="get-in-touch text-center">
   <section>
     <header>
       <h2>{{title || "Ready to launch?"}}</h2>
     </header>
     <p>
-      Interested in letting us help you design your brand? <a [routerLink]="['/contact']">Contact us</a> or check out
-      <a [routerLink]="['/work']">our work</a>.
+      Enough talking, let's get right to it.
     </p>
 
-    <div class="text-center padding-top--lg padding-bottom--lg">
+    <div class="text-center margin-bottom--lg">
       <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--dark"><span aria-hidden="true">🚀 </span>Let's
         go!</a>
     </div>
