--- a/src/app/pages/case-study/case-study.component.scss
+++ b/src/app/pages/case-study/case-study.component.scss
@@ -9,6 +9,49 @@
     list-style: none;
   }
 
+  &__info {
+    p {
+      margin: 0;
+    }
+
+    hr {
+      margin: 40px 0;
+      width: 20px;
+      border-width: 3px;
+    }
+  }
+
+  &__main-info {
+    padding: 40px 0;
+    a { color: inherit; }
+  }
+
+  &__crew-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 0;
+
+    a {
+      display: inline-block;
+      padding: 10px 0;
+      color: inherit;
+      text-decoration: underline;
+      @include hover-focus {
+        text-decoration: none;
+      }
+    }
+  }
+
   &__lead-text {
     font-size: 2.5rem;
   }
@@ -55,6 +98,10 @@
   }
 
   &__heading {
+    margin-top: 0;
+  }
+
+  .get-in-touch {
     margin-top: 0;
   }
 }
