--- a/src/app/pages/case-study/case-study.component.scss
+++ b/src/app/pages/case-study/case-study.component.scss
@@ -30,10 +30,16 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    padding-top: 20px;
 
-    li {
-      margin-bottom: 10px;
+    @include md {
+      padding-top: 0;
+
+      li {
+        margin-bottom: 10px;
+      }
     }
+
   }
 
   &__nav {
